<resources>
    <string name="app_name">Outer Space Manager</string>
    <string name="disconnect">Déconnexion</string>
    <string name="galaxy">Galaxie</string>
    <string name="chantier">Chantier Spatial</string>
    <string name="research">recherches</string>
    <string name="flotte">Flotte</string>
    <string name="building">Bâtiments</string>
    <string name="general_view">Vue générale</string>
    <string name="add_new_ship">Ajouter un vaisseau</string>
    <string name="menu">Menu</string>
    <string name="retour">Retour</string>
    <string name="build_image_description">The image of the building</string>
    <string name="build">Construire</string>
    <string name="cost">Coût :</string>
    <string name="search">Rechercher</string>
    <string name="gas_info">Gaz :</string>
    <string name="mineral_infos">Minerais :</string>
    <string name="resource_infos">RESSOURCES</string>
    <string name="light_ship">Chasseur léger</string>
    <string name="number_light_ship">Nombre de chasseur léger</string>
    <string name="heavy_ship">Chasseur lourd</string>
    <string name="number_heavy_ship">Nombre de chasseur lourd</string>
    <string name="spy_ship">Sonde d\'espionage</string>
    <string name="number_spy_ship">Nombre de sonde d\'espionnage</string>
    <string name="destroyer">Destroyer</string>
    <string name="number_destroyer">Nombre de Destroyer</string>
    <string name="death_star">Étoile de la mort</string>
    <string name="number_death_star">Nombre d\'étoile de la mort</string>
    <string name="cancel">Annuler</string>
    <string name="attack">Attaquer</string>
    <string name="speed_fleet">Vitesse de la flotte</string>
    <string name="speed_building">Vitesse de construction</string>
    <string name="mineral_modifier">Vitesse de minage</string>
    <string name="started_attack">L\'attaque à été lancée !</string>
    <string name="see_result_now">Vous pouvez voir le résultat de l\'attaque dès maintenant !</string>
    <string name="see_result_in">Vous pourrez voir le résultat dans </string>
    <string name="not_enough_ships">Requête invalide, pas assez de vaisseau ou une sorte de truc comme ça</string>
    <string name="api_problem">Problème interne de l\'API, réessayez plus tard...</string>
</resources>
